@@ -32,10 +32,10 @@ Measures
       measures.corrcoef
       measures.corrstability
       measures.ds
-      measures.glm
       measures.irelief
       measures.noiseperturbation
       measures.searchlight
+      measures.statsmodels_adaptor
 
 
 
